feat: refactor login script

--- a/setting.json.example
+++ b/setting.json.example
@@ -1,5 +1,6 @@
 {
     "vpnName": "vpnName",
+    "username": "username",
     "password": "password",
     "authenticationMethod": 1,
     "secretKey": "secretKey"
